entity module added

--- a/PracticalProject1/appsettings.json
+++ b/PracticalProject1/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProjectConnectionString": "Server=ALPER\\SQLEXPRESS; Database=ProjectDB; Trusted_Connection=true; MultipleActiveResultSets=true"
+  }
 }
